--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="alertDialogTheme">@style/AppBottomSheetDialogTheme1</item>
+
     </style>
 
     <style name="Theme.EduAPP.NoActionBar">
@@ -22,4 +26,37 @@
     <style name="Theme.EduAPP.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.EduAPP.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
+
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.BottomSheetDialog">
+
+
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+
+    </style>
+
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bgforjoin</item>
+
+
+
+    </style>
+    <style name="AppBottomSheetDialogTheme1" parent="Theme.Design.BottomSheetDialog">
+
+
+        <item name="bottomSheetStyle">@style/AppModalStyle1</item>
+
+    </style>
+
+    <style name="AppModalStyle1" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bgforalertdialog</item>
+
+
+
+    </style>
+
+
 </resources>
+
+
