--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.EduAPP" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.EduAPP" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#8A56AC</item>
         <item name="colorPrimaryVariant">#8A56AC</item>
