--- a/app/src/main/res/layout/activity_student_home.xml
+++ b/app/src/main/res/layout/activity_student_home.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".student.studentHome"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".student.studentHome">
 
     <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/container">
-
+        android:layout_height="match_parent">
 
 
     </FrameLayout>
@@ -34,7 +32,5 @@
         app:cnb_orientationMode="horizontal"
         app:cnb_radius="8dp"
         app:cnb_unselectedColor="@color/white" />
-
-
 
 </RelativeLayout>
