--- a/app/src/main/res/layout/fragment_bottom_join.xml
+++ b/app/src/main/res/layout/fragment_bottom_join.xml
@@ -55,6 +55,7 @@
             android:textSize="16sp" />
 
   <com.google.android.material.textfield.TextInputEditText
+      android:id="@+id/groupCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E1C7C7"
@@ -66,7 +67,7 @@
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:padding="20dp"
-           android:hint="Group Name"
+           android:hint="Group Code"
            app:hintTextColor="@color/black"/>
 
 
@@ -79,6 +80,7 @@
             android:layout_marginBottom="40dp"
             android:background="@drawable/button"
             android:text="Join Group"
+            android:padding="10dp"
             android:id="@+id/joinGrp"
             android:textColor="@color/white"
             android:textStyle="bold"
