--- a/app/src/main/res/layout/fragment_forcreate.xml
+++ b/app/src/main/res/layout/fragment_forcreate.xml
@@ -55,24 +55,25 @@
             android:textSize="16sp" />
 
 
-       <com.google.android.material.textfield.TextInputEditText
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:background="#E1C7C7"
-           android:gravity="center_horizontal"
-           android:inputType="textShortMessage"
-           android:textAlignment="center"
-           android:textColor="@color/black"
-           android:textColorHint="@color/white"
-           android:textStyle="bold"
-           android:layout_margin="20dp"
-           android:padding="20dp"
-           android:hint="Group Name"
-           app:hintTextColor="@color/black"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/grpName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="#E1C7C7"
+            android:gravity="center_horizontal"
+            android:hint="Group Name"
+            android:inputType="textShortMessage"
+            android:padding="20dp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textColorHint="@color/white"
+            android:textStyle="bold"
+            app:hintTextColor="@color/black" />
 
 
         <Button
-            android:id="@+id/creategrup"
+            android:id="@+id/creategrupbttn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
