--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -50,7 +50,7 @@
         android:padding="20dp"
         android:background="@drawable/input_text"
         android:textColor="#8A56AC"
-        android:textColorHint="8A56AC"
+        android:textColorHint="#8A56AC"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/resetPassword"
         app:layout_constraintEnd_toEndOf="parent"
