--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".Fragments.FragmentLogin">
 
 
@@ -11,7 +12,8 @@
         android:id="@+id/emailLogin"
         android:layout_width="392dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/input_text"
         android:drawableStart="@drawable/ic_baseline_email_24"
         android:ems="10"
@@ -19,16 +21,13 @@
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColor="#8A56AC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/passwordLogin"/>
+        tools:layout_editor_absoluteX="9dp" />
 
     <EditText
         android:id="@+id/passwordLogin"
         android:layout_width="392dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
         android:background="@drawable/input_text"
         android:drawableStart="@drawable/ic_password"
         android:ems="10"
@@ -36,54 +35,49 @@
         android:inputType="textPassword"
         android:padding="10dp"
         android:textColor="#8A56AC"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
         app:layout_constraintTop_toBottomOf="@+id/emailLogin"
-        app:layout_constraintBottom_toTopOf="@id/forgotPassword" />
+        app:layout_constraintVertical_bias="0.387"
+        tools:layout_editor_absoluteX="9dp" />
+
+
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Forgot Password?"
+        android:textAllCaps="false"
+        android:textColor="#8A56AC"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/login"
+        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
+        tools:layout_editor_absoluteX="276dp" />
+
 
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="140dp"
         android:background="@drawable/button"
         android:text="   LOGIN   "
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        android:layout_margin="3dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="461dp"
-        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
-        app:layout_constraintBottom_toTopOf="@id/progressBar2"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/login"/>
-
-    <TextView
-        android:id="@+id/forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:textAllCaps="false"
-        android:textColor="#8A56AC"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="385dp"
-        app:layout_constraintTop_toBottomOf="@id/passwordLogin"
-        app:layout_constraintBottom_toTopOf="@id/login"/>
+        tools:layout_editor_absoluteX="206dp"
+        tools:layout_editor_absoluteY="660dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
