--- a/app/src/main/res/layout/fragment_bottom_join.xml
+++ b/app/src/main/res/layout/fragment_bottom_join.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bgforjoin"
     tools:context=".student.bottomFragmentJoin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/tech_join">
 
 
 
