--- a/app/src/main/res/layout/activity_ques_assignment.xml
+++ b/app/src/main/res/layout/activity_ques_assignment.xml
@@ -5,25 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".teachers.Ques_assignment">
-    <Button
-        android:id="@+id/upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="216dp"
-        android:text="upload"
-        android:onClick="upload"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/browse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="160dp"
+        android:layout_marginStart="176dp"
         android:layout_marginTop="240dp"
-        android:text="browse"
+        android:layout_marginBottom="352dp"
         android:onClick="browse"
+        android:text="browse"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upload" />
+       />
 </androidx.constraintlayout.widget.ConstraintLayout>
