--- a/app/src/main/res/layout/activity_window_teachers.xml
+++ b/app/src/main/res/layout/activity_window_teachers.xml
@@ -4,24 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+android:orientation="vertical"
     tools:context=".teachers.window_teachers">
 
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tblayout"
-        android:layout_width="match_parent"
-
-        android:layout_height="41dp"
-        android:background="@color/teal_200"
-        app:tabMode="scrollable">
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="match_parent"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/vp2"/>
-
+        android:text="chats"
+        android:id="@+id/chats_teacher"
+        android:background="@drawable/chatbutton"
+        android:layout_weight="1"
+        android:textColor="@color/white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="chats"
+        android:id="@+id/Assignment_teacher"
+        android:background="@drawable/chatbutton"
+        android:layout_weight="1"
+        android:textColor="@color/white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="chats"
+        android:id="@+id/attendence_teacher"
+        android:background="@drawable/chatbutton"
+        android:layout_weight="1"
+        android:textColor="@color/white"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
+</LinearLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/relativeframe2"/>
 
 </LinearLayout>
